--- a/index.html
+++ b/index.html
@@ -3,28 +3,47 @@
 
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Activity 1: Basic HTML Bio</title>
+  <link rel="stylesheet" type="text/css" href=C:\Users\juano\Desktop\code\myPortfolio\master.css>
 </head>
 
 <body>
 
-  <!-- Header -->
-  <h1></h1>
+  <!-- Site Header -->
+  <header>
+    <!-- h1: The most important headline -->
+    <h1>Student Bio</h1>
+  </header>
 
-  <!-- Image -->
-  <img src="" alt=""/>
-  <br>
+  <div class="container">
 
- 
-  <a href="" target=""></a>
-  <br>
+    <!-- Section 1: Bio -->
+    <section class="goLeft">
+      <!-- h2: Tier-2 Headline (Not as important as the h1 header, but more than one allowed). -->
+      <h2>Your Name</h2>
 
-  <!-- Bold Link -->
-  <strong><a href="">This is a bold link</a></strong>
-  <br>
+      <!-- Image with link -->
+      <img class="pic" src="https://placehold.it/200x200" alt="Your Name">
 
-  
-  <a href="#">This is a placeholder link, goes no where, for now</a>
+      <!-- Paragraph with embedded link -->
+      <p>Write a short paragraph or two about yourself, or use placeholder text from <a href="http://www.lipsum.com/">www.lipsum.com</a></p>
+    </section>
+
+    <!-- Section 2: Contact Info -->
+    <section class="contactInfo">
+
+      <!-- h2: Tier-2 Headline -->
+      <h2>Contact Info</h2>
+
+      <!-- Unordered list -->
+      <ul>
+        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+      </ul>
+
+    </section>
+  </div>
 
 </body>
 
